--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -8,13 +8,13 @@ jobs:
     name: Test and Lint
     runs-on: ubuntu-22.04
     steps:
-      - name: Login to Docker Hub
+      - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: test
         run: docker-compose run --rm app sh -c "python manage.py test"
       - name: Lint
